<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application  -->



    <string name="FONT_BOLD">SohoGothicPro-Bold.ttf</string>
    <string name="FONT_LIGHT">SohoGothicPro-Light.ttf</string>
    <string name="FONT_MEDIUM">SohoGothicPro-Medium.ttf</string>
    <string name="FONT_REGULAR">SohoGothicPro-Regular.ttf</string>
    <string name="FONT_EXTRA_BOLD">SohoGothicPro-ExtraBold.otf</string>


    <string name="shared_prefs_name">nu.pto.androidapp</string>

    <!-- info@pto.nu -->
    <!-- +468202061 -->
    <!-- +46705370900 -->
    <string name="support_sms">+46705370900</string>
    <string name="support_phone">+468202061</string>
    <string name="support_mail">info@pto.ne</string>

    <string name="app_name">PT+</string>

    <!-- ERROR messages -->
    <string name="something_goes_wring">Somethig goes wrong</string>
    <string name="version_code_error">Version code error</string>
    <string name="wrong_access_token">Wrong access token</string>
    <string name="error_no_internet_dialog_title">Connection Error!</string>
    <string name="error_no_internet_dialog_descroption">Check your Internet connection.</string>
    <string name="string_youtube_init_error">Cannot play video</string>
    <string name="string_invalid_input_fields">Invalid fields</string>
    <string name="version_code_error_dialog_title">Info</string>
    <string name="version_code_error_dialog_message">There is a new version of the PT+ app available on Play Store. Get it now!</string>


    <!-- font names -->


    <!-- menu titles -->
    <string name="menu_title_home">Start</string>
    <string name="menu_title_workouts">Workouts</string>
    <string name="menu_title_diet">Diet</string>
    <string name="menu_title_statistics">Statistics</string>
    <string name="menu_title_messages">Messages</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_tech_support">Technical Support</string>
    <string name="menu_title_logout">Logout</string>

    <!-- application -->
    <string name="support_confirm">Ok</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_application_name_p1">pt</string>
    <string name="string_application_name_p2">+</string>
    <string name="string_ok">Yes</string>
    <string name="string_no">No</string>
    <string name="string_pt">pt</string>
    <string name="string_youtube">Youtube</string>
    <string name="string_pto">pt+</string>
    <string name="string_pto_uppercase">PT+</string>


    <!-- workout -->
    <string name="fragment_title_workouts">Workout</string>
    <string name="workout_log_title">Log</string>
    <string name="string_new_workout">New Workout - </string>
    <string name="string_workout_successfully_completed">Your training log is saved and sent to me. Sincerely</string>

    <!--training-->
    <string name="string_start_timer">START TIMER</string>
    <string name="string_stop_timer">STOP TIMING</string>
    <string name="string_clear">STOP</string>
    <string name="string_training_paused">TRAINING PAUSED</string>
    <string name="string_leave_workout">Would you like to finish your workout ?</string>
    <string name="string_best_time">Best possible</string>
    <string name="string_repeat">Repetitions</string>
    <string name="string_time_unit">times</string>
    <string name="string_effort">Effort</string>
    <string name="string_rest">Rest</string>
    <string name="string_distance">Distance</string>

    <!-- trainer -->
    <string name="string_personal_trainer">Your personal trainer</string>


    <!-- statistics -->
    <string name="fragment_title_statistics">Statistics</string>
    <string name="string_trainings_per_week">Number of exercise sessions per week</string>


    <!-- personal -->
    <string name="string_forgot_password"><u>Forgot password ?</u></string>
    <string name="string_return"><u>Return to start</u></string>
    <string name="string_mobile_phone_number">Mobile nr.</string>
    <string name="dialog_title_year_of_birth">Year of birth</string>
    <string name="string_last_name">Last name</string>
    <string name="string_first_name">First name</string>
    <string name="string_personal_info">Personal Details</string>
    <string name="string_profile">Profile Photo</string>
    <string name="string_change_picture">This is your current image. To change the image, upload a new</string>
    <string name="string_change_picture_button">CHANGE IMAGE</string>
    <string name="string_email">Email</string>
    <string name="string_select_file_to_upload">To change the image, upload a new</string>
    <string name="string_repeat_new_password">Repeat New Password</string>
    <string name="string_new_password">New Password</string>
    <string name="string_old_password">Old Password</string>
    <string name="string_settings">Settings</string>
    <string name="string_change_password">CHANGE PASSWORD</string>
    <string name="string_password">Password</string>
    <string name="string_year_of_birth">Year of birth</string>
    <string name="string_phone_number">Phone number</string>
    <string name="string_email_for_password_recovery">Enter email for new password</string>
    <string name="string_insert_new_password">SEND NEW PASSWORD</string>
    <string name="string_login">Login</string>
    <string name="string_change_personal_info">Change Info</string>
    <string name="string_photo_from_library">from Photo Library</string>
    <string name="string_photo_from_camera">from Camera</string>

    <!-- support-->
    <string name="support_sms_message">Want to sms for support?</string>
    <string name="support_phone_message">Want to phone for support?</string>
    <!---->
    <string name="support_body_head">Låt denna information skickas med i ditt SMS till Supporten\nName: %1$s\nModel: %2$s</string>
    <string name="support_subject">Subject</string>
    <string name="support_mail_chooser_title">Send e-mail to info@pto.nu</string>
    <string name="string_title_technical_support">Technical Support</string>
    <!---->
    <string name="string_support_text">Vi på pt+ vill att du som kund ska vara nöjd med de tjänster du har köpt genom oss. Har du frågor kring appen eller stöter på tekniska problem är du välkommen att höra av dig till oss så ska vi hjälpa dig på bästa sätt.\n\nBästa hälsningar\nTeam pt+</string>
    <string name="string_support_via_email">Support via e-mail</string>
    <string name="string_support_via_phone">Support by phone</string>
    <string name="string_support_via_sms">Support via SMS</string>


    <!-- activities log -->
    <string name="string_activity_log">Activity Log</string>


    <!-- messages -->
    <string name="string_messages">Messages</string>
    <string name="string_send">Send</string>
    <string name="string_message">Message</string>
    <!---->
    <string name="string_message_was_not_send">Your message was not send</string>
    <!---->
    <string name="string_cannot_send_empty_message">You cannot send empty message</string>

    <!-- diet -->
    <string name="string_new_diet">New diet - </string>
    <string name="string_active_until">Valid until </string>
    <string name="string_diet_search_hint">Search</string>
    <string name="string_diet">Diet</string>


    <!-- subscription -->
    <!---->
    <string name="button_subscribe_text">avsulta prenumeration</string>
    <!---->
    <string name="subscribe_title">Prenumeration av paket</string>
    <!---->
    <string name="subscribe_description_inactive">Om du har ett aktivt prenumerationspaket kan du avsluta tjänsten via knappen nedan</string>
    <!---->
    <string name="subscribe_description_active">Du har ett aktivt prenumerationspaket.\nVill du avsluta tjänsten gör du det via knappen nedan.</string>
    <string name="subscribe_dialog_message">Are you sure you want to end subscription ?</string>
    <string name="login_failed_dialog_title">Login Field</string>
    <string name="login_failed_dialog_message">There was an error while logging in.\nPlease check you internet connection and try again.</string>
    <string name="login_failed_wrong_user">Incorrect email or password!\nPlease try again.</string>
    <string name="login_screen_title">Time to sweat</string>
    <string name="logout_no_internet_alert_message">The device must be online in order to logout.</string>
    <string name="logout_no_internet_alert_title">Warning</string>
    <string name="forgot_password_changed_dialog_title">Forgot Password</string>
    <string name="forgot_password_changed_dialog_message">Password Changed</string>

    <string name="string_activ_prenumeration">Active subscription</string>
    <string name="no_trainer_message"></string>
    <string name="not_enough_data">Not enough data</string>

    <string name="instructions">INSTRUCTIONS</string>
    <string name="read_here">READ HERE</string>
    <string name="close">CLOSE</string>

    <string name="message_status_sending">Sending</string>
    <string name="message_status_sent">Sent</string>
    <string name="message_status_received">Received</string>
    <string name="message_status_read">Read</string>

</resources>
