<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <nu.pto.androidapp.base.ui.PtoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_trainings_per_week"
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="#202020"
            android:textSize="18dp"
            app:font_name="@string/FONT_MEDIUM"/>

        <nu.pto.androidapp.base.ui.statistics.StatisticsChartView
            android:id="@+id/viewStatisticsChartView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            />

        <nu.pto.androidapp.base.ui.PtoTextView
                android:id="@+id/tv_not_enough_data"
                android:layout_width="match_parent"
                android:text="@string/not_enough_data"
                android:gravity="center"
                android:textSize="20sp"
                android:visibility="gone"
                android:layout_height="match_parent"/>



    </LinearLayout>


    </FrameLayout>