<?xml version="1.0" encoding="utf-8"?>

<nu.pto.androidapp.base.util.BaseFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbfbfb"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center|top"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_fragment_login_margin_top"
                android:layout_marginBottom="@dimen/auth_fragment_logo_margin_bottom"
                android:padding="30dp"
                android:src="@drawable/logo"/>

            <nu.pto.androidapp.base.ui.PtoTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/string_email_for_password_recovery"
                android:textColor="#666666"
                android:textSize="@dimen/auth_fragment_font_size"
                app:font_name="@string/FONT_REGULAR" />

            <EditText
                android:id="@+id/edit_text_email_forgot_password"
                style="@style/forgot_password_text"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/string_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/auth_fragment_font_size" />

            <nu.pto.androidapp.base.ui.PtoButton
                android:id="@+id/button_forgot_password"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/string_insert_new_password"
                android:textSize="@dimen/auth_fragment_font_size"
                app:font_name="@string/FONT_REGULAR" />

            <nu.pto.androidapp.base.ui.PtoTextView
                android:id="@+id/textViewBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:autoLink="all"
                android:gravity="center"
                android:linksClickable="false"
                android:selectAllOnFocus="false"
                android:text="@string/string_return"
                android:textColor="#787878"
                android:textSize="@dimen/auth_fragment_font_size_small"
                app:font_name="@string/FONT_REGULAR" />
        </LinearLayout>
    </ScrollView>
</nu.pto.androidapp.base.util.BaseFrameLayout>