<?xml version="1.0" encoding="utf-8"?>
<nu.pto.androidapp.base.util.BaseFrameLayout
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res/nu.pto.androidapp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">
        <EditText
            android:layout_width="fill_parent"
            android:id="@+id/old_change_password_custom_action_bar"
            style="@style/edit_text_custom_action_bar_activity"
            android:layout_marginLeft="@dimen/auth_fragment_margin_left_right"
            android:layout_marginRight="@dimen/auth_fragment_margin_left_right"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/auth_fragment_font_size"
            android:hint="@string/string_old_password"/>
        <EditText
            android:layout_width="fill_parent"
            android:id="@+id/new_change_password_custom_action_bar"
            style="@style/edit_text_custom_action_bar_activity"
            android:layout_marginLeft="@dimen/auth_fragment_margin_left_right"
            android:layout_marginRight="@dimen/auth_fragment_margin_left_right"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/auth_fragment_font_size"
            android:hint="@string/string_new_password"/>
        <EditText
            android:layout_width="fill_parent"
            android:id="@+id/confirm_change_password_custom_action_bar"
            style="@style/edit_text_custom_action_bar_activity"
            android:layout_marginLeft="@dimen/auth_fragment_margin_left_right"
            android:layout_marginRight="@dimen/auth_fragment_margin_left_right"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/auth_fragment_font_size"
            android:hint="@string/string_repeat_new_password"/>

    </LinearLayout>
</nu.pto.androidapp.base.util.BaseFrameLayout>